--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,11 @@
 {
     "configurations": [
+
         {
             "type": "lldb",
             "request": "launch",
             "name": "Run your Executable",
-            "program": "${workspaceFolder}/test-project/.build/debug/helloworld",
+            "program": "${workspaceFolder}/test-project/.build/debug/HelloWorld",
             "args": [],
             "cwd": "${workspaceFolder}/test-project",
             "preLaunchTask": "swift-build"
